# AcmeBox

./: .gitignore  acmebox-eval-results.html  acmebox-flywheel.html  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: launch.json
apps/api/: package.json  tsconfig.json
apps/api/bruno/: bruno.json
apps/api/src/: api.ts  index.ts  layers.ts
apps/eval/: .env.example  .gitignore  README.md  pyproject.toml
apps/eval/src/: __init__.py  cli.py  config.py  conversation.py  evaluate.py  harness.py  mcp.py  policy.md
apps/eval/src/flywheel/: __init__.py  config.py  corrector.py  export.py  gate.py  generate.py  judge.py  llm.py  mongo.py  orchestrate.py  scenarios.py  tools.py  tools_catalog.json  transcript.py  worker.py
apps/eval/src/flywheel/seeds/: active_pending.json  delivered_refund.json  paused_expired.json
apps/eval/src/tasks/: __init__.py  add_new_default_address.json  browse_meals_and_change_plan.json  cancel_active_subscription.json  cancel_delivered_order_rejected.json  cancel_paused_subscription.json  cancel_pending_order.json  cancel_pending_order_and_update_default_address.json  cancel_shipped_order_rejected.json  cancel_subscription.json  change_address_shipped_order_rejected.json  change_default_payment_method.json  change_pending_order_address.json  change_pending_order_payment_method.json  change_plan_active_subscription.json  change_plan_canceled_subscription_rejected.json  delete_address.json  delete_expired_payment_method.json  identity_verification_failure.json  identity_verification_no_id.json  list_active_meals.json  models.py  pause_active_subscription.json  pause_canceled_subscription_rejected.json  pause_subscription.json  pause_subscription_and_change_default_payment.json  process_refund_bad_ingredients.json  reactivate_canceled_subscription_rejected.json  refund_at_limit.json  refund_bad_ingredients.json  refund_bad_ingredients_and_pause_subscription.json  refund_change_of_mind_rejected.json  refund_denied_bad_reason.json  refund_denied_change_of_mind.json  refund_denied_lifetime_limit.json  refund_denied_limit_reached.json  refund_happy_path.json  refund_invalid_reason.json  refund_lifetime_limit.json  refund_limit_exceeded.json  (+13 more)
apps/eval/tests/: test_flywheel_corrector.py  test_flywheel_export.py  test_flywheel_gate.py  test_flywheel_generate.py  test_flywheel_orchestrate.py  test_flywheel_tools.py  test_flywheel_transcript.py
apps/llm/: .env.example  .gitignore  README.md  chat.py  pyproject.toml
apps/llm/scripts/: serve.sh  setup.sh  train.sh  train_remote.sh
apps/llm/train/: data.py  requirements-train.txt  (+1 more)
apps/mcp/: README.md  package.json
apps/model/: .env.example  README.md  pyproject.toml
apps/model/scripts/: serve.sh  setup.sh
apps/web/: package.json  pnpm-lock.yaml
(+192 files in other folders)
