[project]
name = "acmebox-eval"
version = "0.1.0"
description = "tau-bench-style evaluation harness for the AcmeBox agent (ephemeral Postgres + MCP)."
authors = [{ name = "AcmeBox" }]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "psycopg[binary] (>=3.2,<4.0)",
    "mcp (>=1.12,<2.0)",
    "openai (>=1.40,<2.0)",
    "pydantic (>=2.7,<3.0)",
]

[project.scripts]
acmebox-eval = "src.cli:main"

[tool.poetry]
packages = [{ include = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "mcp: spawns the MCP server (slower; needs pnpm + Postgres, no API keys)",
]
