[project]
name = "acmebox-eval"
version = "0.1.0"
description = "tau-bench-style evaluation harness for the AcmeBox agent (ephemeral Postgres + MCP)."
authors = [{ name = "AcmeBox" }]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "psycopg[binary] (>=3.2,<4.0)",
    "mcp (>=1.12,<2.0)",
    "openai (>=1.40,<2.0)",
    "pydantic (>=2.7,<3.0)",
    "pymongo (>=4.8,<5.0)",
]

[project.optional-dependencies]
# Only needed for `acmebox-flywheel export --render-sample` (applies the real
# LFM2.5 chat template to verify tool-call fidelity + assistant-only loss mask).
template = ["transformers>=4.45", "jinja2>=3.0"]

[project.scripts]
acmebox-eval = "src.cli:main"
acmebox-flywheel = "src.flywheel.worker:main"

[tool.poetry]
packages = [{ include = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "mcp: spawns the MCP server (slower; needs pnpm + Postgres, no API keys)",
    "db: exercises check_db against an ephemeral DB (needs pnpm + Postgres, no API keys)",
]
