[project]
name = "acmebox-model"
version = "0.1.0"
description = "vLLM serving for the AcmeBox agent-under-test: an OpenAI-compatible LFM2.5 endpoint running on a RunPod GPU."
authors = [{ name = "AcmeBox" }]
readme = "README.md"
requires-python = ">=3.11,<4.0"

# This app is bash-only: the model is served on the pod by scripts/serve.sh via
# vLLM. The GPU stack (vllm + its torch CUDA wheels) is installed *on the pod* by
# scripts/setup.sh — it does not install on macOS/arm64 and is CUDA-specific, so
# it is intentionally not declared here. Locally you only edit the scripts and
# README; pull them onto the pod with git.
dependencies = []

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
